
SVN
-------------------------------
XML:   Resolved issue CASTOR-1027 using contribution from Edward Kuns [edward.kuns@aspect.com]
       demo example of SourceGenerator does not build
       Details: http://jira.codehaus.org/browse/CASTOR-1027
       (Edward - 20061005)

XML:   Resolved issue CASTOR-1608 using contribution from Edward Kuns [edward.kuns@aspect.com]
       Split "main" out of SourceGenerator.java
       Details: http://jira.codehaus.org/browse/CASTOR-1608
       (Edward - 20061005)

XML:   Resolved issue CASTOR-1602 using contribution from Edward Kuns [edward.kuns@aspect.com]
       Add new test case type to read schema only
       Details: http://jira.codehaus.org/browse/CASTOR-1602
       (Edward - 20061005)

XML:   Resolved issue CASTOR-1607 using contribution from Edward Kuns [edward.kuns@aspect.com]
       Add regression test for parent issue (Generated classes are not
       compileable for simpleTypes with list-elements)
       Details: http://jira.codehaus.org/browse/CASTOR-1607
       (Edward - 20061003)

XML:   Resolved issue CASTOR-1226 using contribution from Bertrand Martel [toto@free.fr]
       Fixed problem with type derivation for referenced/included attribute.
       Details: http://jira.codehaus.org/browse/CASTOR-1226
       (Edward - 20061003)

XML:   Resolved issue CASTOR-1604 using contribution from Edward Kuns [edward.kuns@aspect.com]
       Fix two test case failures (one regression, one not)
       Details: http://jira.codehaus.org/browse/CASTOR-1604
       (Edward - 20061002)

XML:   Resolved issue CASTOR-1593 using contribution from M.-Leander Reimer [l.reimer@adaptions.de]
       Fixed problem with AnyNode not preserving whitespace during unmarshalling.
       Details: http://jira.codehaus.org/browse/CASTOR-1593
       (Werner - 20061002)

XML:   Resolved issue CASTOR-1591 using contribution from Edward Kuns [edward.kuns@aspect.com]
       Cleanup and bug fixes for test framework.